--- a/RestAssured/test-output/emailable-report.html
+++ b/RestAssured/test-output/emailable-report.html
@@ -9,10 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">3,422</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">5,127</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">LambokWithJsonArray.CreateUserWithJsonArrayLombokPOJO</td><td><a href="#m0">createAnimalUserWithJsonArray_LombokBuilder</a></td><td rowspan="1">1726333800378</td><td rowspan="1">3348</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">PostWithMultipleOptions.PostAPIWithDifferetData</td><td><a href="#m0">bodyWithPDFTest</a></td><td rowspan="1">1726338060044</td><td rowspan="1">5060</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">LambokWithJsonArray.CreateUserWithJsonArrayLombokPOJO#createAnimalUserWithJsonArray_LombokBuilder</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">PostWithMultipleOptions.PostAPIWithDifferetData#bodyWithPDFTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
