--- a/RestAssured/test-output/index.html
+++ b/RestAssured/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\ashish\AppData\Local\Temp\testng-eclipse--1957435883\testng-customsuite.xml</span>
+                    <span>C:\Users\ashish\AppData\Local\Temp\testng-eclipse--294701686\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="LambokWithJsonArray.CreateUserWithJsonArrayLombokPOJO" class="method navigator-link" hash-for-method="createAnimalUserWithJsonArray_LombokBuilder">createAnimalUserWithJsonArray_LombokBuilder</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="PostWithMultipleOptions.PostAPIWithDifferetData" class="method navigator-link" hash-for-method="bodyWithPDFTest">bodyWithPDFTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,14 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">LambokWithJsonArray.CreateUserWithJsonArrayLombokPOJO</span>
+              <span class="class-name">PostWithMultipleOptions.PostAPIWithDifferetData</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="createAnimalUserWithJsonArray_LombokBuilder">
-                  </a> <!-- createAnimalUserWithJsonArray_LombokBuilder -->
-                  <span class="method-name">createAnimalUserWithJsonArray_LombokBuilder</span>
+                  <a name="bodyWithPDFTest">
+                  </a> <!-- bodyWithPDFTest -->
+                  <span class="method-name">bodyWithPDFTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\ashish\AppData\Local\Temp\testng-eclipse--1957435883\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\ashish\AppData\Local\Temp\testng-eclipse--294701686\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,11 +146,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;LambokWithJsonArray.CreateUserWithJsonArrayLombokPOJO&quot;&gt;
+      &lt;class name=&quot;PostWithMultipleOptions.PostAPIWithDifferetData&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;createAnimalUserWithJsonArray_LombokBuilder&quot;/&gt;
+          &lt;include name=&quot;bodyWithPDFTest&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- LambokWithJsonArray.CreateUserWithJsonArrayLombokPOJO --&gt;
+      &lt;/class&gt; &lt;!-- PostWithMultipleOptions.PostAPIWithDifferetData --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -192,14 +192,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'createAnimalUserWithJsonArray_LombokBuilder')
-data.setCell(0, 2, 'LambokWithJsonArray.CreateUserWithJsonArrayLombokPOJO')
-data.setCell(0, 3, 3348);
+data.setCell(0, 1, 'bodyWithPDFTest')
+data.setCell(0, 2, 'PostWithMultipleOptions.PostAPIWithDifferetData')
+data.setCell(0, 3, 5060);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -214,15 +214,21 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">2 ignored methods</span>
+            <span class="header-content">5 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">LambokWithJsonArray.CreateUserWithJsonArrayLombokPOJO</span>
+              <span class="ignored-class-name">PostWithMultipleOptions.PostAPIWithDifferetData</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">createUserWithJsonArray_LombokBuilder</span>
+                <span class="ignored-method-name">bodyWithHTMLTest</span>
                 <br/>
-                <span class="ignored-method-name">createUsesWithJsonArrayLombokPOJO</span>
+                <span class="ignored-method-name">bodyWithMultiPartTest</span>
+                <br/>
+                <span class="ignored-method-name">bodyWithJavaScriptTest</span>
+                <br/>
+                <span class="ignored-method-name">bodyWithTextTest</span>
+                <br/>
+                <span class="ignored-method-name">bodyWithXMLTest</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -234,9 +240,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">LambokWithJsonArray.CreateUserWithJsonArrayLombokPOJO</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">PostWithMultipleOptions.PostAPIWithDifferetData</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">createAnimalUserWithJsonArray_LombokBuilder</span>
+                <span class="method-name">bodyWithPDFTest</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
