--- a/RestAssured/test-output/old/Default suite/classes.html
+++ b/RestAssured/test-output/old/Default suite/classes.html
@@ -4,22 +4,34 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>LambokWithJsonArray.CreateUserWithJsonArrayLombokPOJO</td>
+<td>PostWithMultipleOptions.PostAPIWithDifferetData</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>createUserWithJsonArray_LombokBuilder</td>
+<td>bodyWithXMLTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>createAnimalUserWithJsonArray_LombokBuilder</td>
+<td>bodyWithHTMLTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>createUsesWithJsonArrayLombokPOJO</td>
+<td>bodyWithTextTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>bodyWithJavaScriptTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>bodyWithMultiPartTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>bodyWithPDFTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
