--- a/RestAssured/test-output/old/Default suite/methods-not-run.html
+++ b/RestAssured/test-output/old/Default suite/methods-not-run.html
@@ -1,4 +1,7 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>LambokWithJsonArray.CreateUserWithJsonArrayLombokPOJO.createUserWithJsonArray_LombokBuilder</td></tr>
-<tr><td>LambokWithJsonArray.CreateUserWithJsonArrayLombokPOJO.createUsesWithJsonArrayLombokPOJO</td></tr>
+<tr><td>PostWithMultipleOptions.PostAPIWithDifferetData.bodyWithHTMLTest</td></tr>
+<tr><td>PostWithMultipleOptions.PostAPIWithDifferetData.bodyWithMultiPartTest</td></tr>
+<tr><td>PostWithMultipleOptions.PostAPIWithDifferetData.bodyWithJavaScriptTest</td></tr>
+<tr><td>PostWithMultipleOptions.PostAPIWithDifferetData.bodyWithTextTest</td></tr>
+<tr><td>PostWithMultipleOptions.PostAPIWithDifferetData.bodyWithXMLTest</td></tr>
 </table>
