--- a/RestAssured/test-output/old/Default suite/methods.html
+++ b/RestAssured/test-output/old/Default suite/methods.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="948bbd">  <td>24/09/14 23:51:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostAPIWithDifferetData.bodyWithPDFTest()[pri:0, instance:PostWithMultipleOptions.PostAPIWithDifferetData@cad498c]">bodyWithPDFTest</td> 
-  <td>main@760357227</td>   <td></td> </tr>
+<tr bgcolor="afe297">  <td>24/09/17 22:51:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsAPITests.createContactsTest()[pri:0, instance:DeserializationProcess.ContactsAPITests@2accdbb5]">createContactsTest</td> 
+  <td>main@2102368942</td>   <td></td> </tr>
 </table>
